# services/gateway/internal/http/router/booking.go
@@ -8,6 +8,7 @@ import (
 
 type bookingHandler interface {
 	CreateBooking(*gin.Context)
+	QuoteBooking(*gin.Context)
 	GetBookings(*gin.Context)
 	GetRoomBookings(*gin.Context)
 	GetAvailability(*gin.Context)
@@ -28,6 +29,7 @@ func NewBookingRoutes(pattern string, h bookingHandler) RouteRegistrar {
 
 func (br bookingRoutes) Register(r *gin.RouterGroup) {
 	r.GET("/:countryCode/:citySlug/hotels/:hotelId/rooms/availability", br.h.GetAvailability)
+	r.POST("/:countryCode/:citySlug/hotels/:hotelId/bookings/quote", br.h.QuoteBooking)
 
 	bookings := r.Group("/:countryCode/:citySlug/hotels/:hotelId/bookings")
 	bookings.Use(middleware.AuthMiddleware())
